--- a/package.json
+++ b/package.json
@@ -23,31 +23,33 @@
   },
   "homepage": "https://github.com/hellovvorld/mmall-admin-fe#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.8.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.9.0",
+    "npm-cli": "^0.1.0",
     "sass-loader": "^7.0.2",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.2.0",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^2.2.1",
+    "webpack-cli": "^3.0.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "rc-pagination": "^1.16.3",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-fileupload": "^2.4.0",
-    "react-router": "^4.2.0",
+    "react-router": "^3.0.2",
     "sb-admin-2": "^3.3.8",
     "simditor": "^2.3.6"
   }
